Remove JDO from auth path
Replaces usages of JDO for DB queries in AuthN and AuthZ filters with JDBC and raw SQL. JDBI wasn't feasible because the legacy Alpine code base doesn't have wiring for it. The motivating factors for this change are:

* Advancement of our strategic goal of getting rid of JDO completely.
* Improvement of request latencies across the board by avoiding DataNucleus overhead and N+1 queries.
* Removal of the footguns caused by passing persistent JDO objects through layers, never knowing which fields are set and when unintended lazy loading kicks in.

The fetching of principals, their team memberships, and effective permissions has been reduced to a single query, located in the corresponding `AuthenticationService` implementation. The queries are fully supported by indexes and >10x faster than the previous JDO implementation.

The `ApiKey` and `User` JDO models no longer implement the `Principal` interface. In their stead, new immutable `ApiKeyPrincipal` and `UserPrincipal` records are used. This decouples downstream auth concerns from persistence.

The new auth queries also include the check for whether PAC is enabled. Downstream PAC-sensitive code no longer needs to query this separately, saving DB round-trips.

Signed-off-by: nscuro <nscuro@protonmail.com>